--- a/src/forms/PasswordGenDlg.ui
+++ b/src/forms/PasswordGenDlg.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>462</width>
-    <height>543</height>
+    <width>460</width>
+    <height>505</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -42,8 +42,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>440</width>
-        <height>271</height>
+        <width>438</width>
+        <height>243</height>
        </rect>
       </property>
       <attribute name="title" >
@@ -152,30 +152,14 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="0" >
+           <item row="0" column="2" >
             <widget class="QCheckBox" name="checkBox4" >
              <property name="text" >
               <string>&amp;Special Characters</string>
              </property>
-             <property name="checked" >
-              <bool>true</bool>
-             </property>
             </widget>
            </item>
           </layout>
-         </item>
-         <item>
-          <spacer>
-           <property name="orientation" >
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0" >
-            <size>
-             <width>101</width>
-             <height>108</height>
-            </size>
-           </property>
-          </spacer>
          </item>
         </layout>
        </item>
@@ -240,8 +224,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>440</width>
-        <height>271</height>
+        <width>438</width>
+        <height>243</height>
        </rect>
       </property>
       <attribute name="title" >
@@ -262,54 +246,37 @@
         </spacer>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout" >
-         <item>
-          <layout class="QGridLayout" name="gridLayout_2" >
-           <property name="spacing" >
-            <number>15</number>
+        <layout class="QGridLayout" name="gridLayout_2" >
+         <property name="verticalSpacing" >
+          <number>12</number>
+         </property>
+         <item row="0" column="0" >
+          <widget class="QCheckBox" name="checkBoxPL" >
+           <property name="text" >
+            <string>Lower Letters</string>
            </property>
-           <item row="0" column="0" >
-            <widget class="QCheckBox" name="checkBoxPU" >
-             <property name="text" >
-              <string>Upper Letters</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1" >
-            <widget class="QCheckBox" name="checkBoxPN" >
-             <property name="text" >
-              <string>Numbers</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0" >
-            <widget class="QCheckBox" name="checkBoxPL" >
-             <property name="text" >
-              <string>Lower Letters</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1" >
-            <widget class="QCheckBox" name="checkBoxPS" >
-             <property name="text" >
-              <string>Special Characters</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
+          </widget>
          </item>
-         <item>
-          <spacer name="horizontalSpacer" >
-           <property name="orientation" >
-            <enum>Qt::Horizontal</enum>
+         <item row="1" column="0" >
+          <widget class="QCheckBox" name="checkBoxPU" >
+           <property name="text" >
+            <string>Upper Letters</string>
            </property>
-           <property name="sizeHint" stdset="0" >
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
+          </widget>
+         </item>
+         <item row="2" column="0" >
+          <widget class="QCheckBox" name="checkBoxPN" >
+           <property name="text" >
+            <string>Numbers</string>
            </property>
-          </spacer>
+          </widget>
+         </item>
+         <item row="3" column="0" >
+          <widget class="QCheckBox" name="checkBoxPS" >
+           <property name="text" >
+            <string>Special Characters</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -341,7 +308,7 @@
      <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
-       <height>15</height>
+       <height>5</height>
       </size>
      </property>
     </spacer>
@@ -540,22 +507,24 @@
   <tabstop>checkBox1</tabstop>
   <tabstop>checkBox2</tabstop>
   <tabstop>checkBox3</tabstop>
-  <tabstop>checkBox4</tabstop>
   <tabstop>checkBox5</tabstop>
   <tabstop>checkBox6</tabstop>
   <tabstop>checkBox7</tabstop>
+  <tabstop>checkBox4</tabstop>
   <tabstop>Radio_2</tabstop>
   <tabstop>Edit_chars</tabstop>
-  <tabstop>checkBoxPU</tabstop>
-  <tabstop>checkBoxPL</tabstop>
-  <tabstop>checkBoxPN</tabstop>
-  <tabstop>checkBoxPS</tabstop>
+  <tabstop>Check_ExcludeLookAlike</tabstop>
+  <tabstop>Check_EveryGroup</tabstop>
   <tabstop>Spin_Num</tabstop>
   <tabstop>Check_CollectEntropy</tabstop>
   <tabstop>Check_CollectOncePerSession</tabstop>
   <tabstop>Edit_dest</tabstop>
   <tabstop>ButtonChangeEchoMode</tabstop>
   <tabstop>ButtonGenerate</tabstop>
+  <tabstop>checkBoxPL</tabstop>
+  <tabstop>checkBoxPU</tabstop>
+  <tabstop>checkBoxPN</tabstop>
+  <tabstop>checkBoxPS</tabstop>
   <tabstop>DialogButtons</tabstop>
  </tabstops>
  <resources/>
