--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -144,7 +144,13 @@
           <item row="0" column="1" colspan="2" >
            <layout class="QHBoxLayout" >
             <item>
-             <widget class="QLineEdit" name="Edit_Password" />
+             <widget class="QLineEdit" name="Edit_Password" >
+              <property name="font" >
+               <font>
+                <family>Serif</family>
+               </font>
+              </property>
+             </widget>
             </item>
             <item>
              <widget class="QToolButton" name="ButtonChangeEchoMode" />
@@ -231,7 +237,13 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="Edit_PwRepeat" />
+           <widget class="QLineEdit" name="Edit_PwRepeat" >
+            <property name="font" >
+             <font>
+              <family>Serif</family>
+             </font>
+            </property>
+           </widget>
           </item>
           <item>
            <layout class="QHBoxLayout" >
