--- a/src/forms/PasswordGenDlg.ui
+++ b/src/forms/PasswordGenDlg.ui
@@ -196,6 +196,11 @@
          </item>
          <item>
           <widget class="QLineEdit" name="Edit_chars" >
+           <property name="font" >
+            <font>
+             <family>Serif</family>
+            </font>
+           </property>
            <property name="maxLength" >
             <number>255</number>
            </property>
@@ -457,7 +462,13 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="Edit_dest" />
+      <widget class="QLineEdit" name="Edit_dest" >
+       <property name="font" >
+        <font>
+         <family>Serif</family>
+        </font>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QToolButton" name="ButtonChangeEchoMode" >
