--- a/src/forms/SimplePasswordDlg.ui
+++ b/src/forms/SimplePasswordDlg.ui
@@ -53,7 +53,13 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="EditPassword" />
+      <widget class="QLineEdit" name="EditPassword" >
+       <property name="font" >
+        <font>
+         <family>Serif</family>
+        </font>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="Button_HidePassword" >
