--- a/src/forms/HelpDlg.ui
+++ b/src/forms/HelpDlg.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Help Contents - KeePassX</string>
+   <string>Help Contents</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
