Add option to show the application window always on top
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@340 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/SettingsDlg.ui
+++ b/src/forms/SettingsDlg.ui
@@ -650,6 +650,13 @@ QListView::item {
           </widget>
          </item>
          <item>
+          <widget class="QCheckBox" name="CheckBox_AlwaysOnTop">
+           <property name="text">
+            <string>Show window always on top</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QCheckBox" name="CheckBox_AlternatingRowColors">
            <property name="text">
             <string>Alternating Row Colors</string>
